--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@ title: 贾磊的博客
 SEOTitle: 贾磊的博客 | Carmackjia Blog
 header-img: img/home-bg.jpg
 email: huxpro@gmail.com
-description: ""
+description: "关于旅行、开发同人生感悟"
 keyword: "贾磊"
 url: "http://johnc.rocks"              # your host, for absolute URL
 baseurl: ""                             # for example, '/blog' if your blog hosted on 'host/blog'
@@ -86,7 +86,7 @@ service-worker: false
 
 # Friends
 friends: [
-    {
+    #{
     #     title: "Su",
     #     href: "http://su.gallery/"
     # },{
