--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 # Site settings
 title: 贾磊的博客
 SEOTitle: 贾磊的博客 | Carmackjia Blog
-header-img: img/home-bg.jpg
+header-img: img/home-bg-new.jpg
 email: huxpro@gmail.com
 description: "关于旅行、开发同人生感悟"
 keyword: "贾磊"
